--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@stripe/stripe-react-native": "^0.50.1",
     "axios": "^1.10.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-native": "^0.80.1",
     "react-native-gesture-handler": "^2.27.1",
