--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
@@ -26,6 +27,7 @@
     "react-native": "^0.80.1",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
