--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "start": "react-native start",
     "test": "jest"
   },
-  "dependencies": {
+ "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-firebase/app": "^22.4.0",
-    "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.1.2",
+    "@react-native-firebase/auth": "^23.0.1",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-picker/picker": "^2.11.1",
-    "@react-native/new-app-screen": "0.80.1",
-    "@react-navigation/drawer": "^7.5.3",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
-    "@stripe/stripe-react-native": "^0.50.1",
-    "axios": "^1.10.0",
+    "@react-native/new-app-screen": "^0.80.1",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@stripe/stripe-react-native": "^0.50.3",
+    "axios": "^1.11.0",
     "moment": "^2.30.1",
-    "react": "^19.1.0",
+    "react": "19.1.0",
     "react-native": "^0.80.1",
-    "react-native-gesture-handler": "^2.27.1",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.11.1",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.14.1",
     "react-native-uuid": "^2.0.3",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -47,7 +47,7 @@
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
