--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,7 @@ react {
     //   A list containing the node command and its flags. Default is just 'node'.
     // nodeExecutableAndArgs = ["node"]
     //
-    //   The command to run when bundling. By default is 'bundle'
+    //   The command to run when bundling. By default it is 'bundle'
     // bundleCommand = "ram-bundle"
     //
     //   The path to the CLI configuration file. Default is empty.
@@ -83,8 +83,8 @@ android {
         applicationId "com.askrashidapk"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.0.4"
     }
     signingConfigs {
         debug {
@@ -93,17 +93,21 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file("release.keystore")
+            storePassword "myStrongPassword123"
+            keyAlias "myreleasekey"
+            keyPassword "myStrongPassword123"
+        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
 }
@@ -118,4 +122,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+
 apply plugin: 'com.google.gms.google-services'
