--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "react-native start",
     "test": "jest"
   },
- "dependencies": {
+  "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
@@ -23,10 +23,14 @@
     "@react-navigation/native-stack": "^7.3.25",
     "@stripe/stripe-react-native": "^0.50.3",
     "axios": "^1.11.0",
+    "i18next": "^25.8.0",
     "moment": "^2.30.1",
     "react": "19.1.0",
+    "react-i18next": "^16.5.4",
     "react-native": "^0.80.1",
+    "react-native-big-calendar": "^4.19.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-global-props": "^1.1.5",
     "react-native-image-picker": "^8.2.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "^5.6.0",
